test/fail/bad-import-decs.mo
import C "lib/decs"; // bad actor import

actor {
};
